--- a/app/assets/stylesheets/missionary.scss
+++ b/app/assets/stylesheets/missionary.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the missionary controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.select-component {
+    display: inline-block;
+    width: 200px;
+    height: 250px;
+    
+}
+
+.row-fluid {
+    white-space: nowrap;
+}
+
+.category-well {
+    overflow: auto;
+}
+
