--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,20 +10,13 @@
 </head>
 <body>
 <div class="container-fluid">
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class-"navbar-header">
-            <a class="navbar-brand" href="#">Missione di Milano</a>
-        </div>
-        
-        <ul class="navbar-right nav navbar-nav">
-            <li><a href="#"><span class="glyphicon glyphicon/user"></span>Log Out</a></li>
-        </ul>
-        
-        
-    </div>
-</nav>
 
+<%= render 'layouts/header' %>
+
+<% flash.each do |message_type, message| %>
+    <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>
+    
 
 <%= yield %>
 
