--- a/app/assets/stylesheets/missionary.scss
+++ b/app/assets/stylesheets/missionary.scss
@@ -2,7 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 .select-component {
-    display: inline-block;
+    display: inline;
     width: 200px;
     height: 250px;
     
@@ -18,4 +18,23 @@
 
 div.select-component.item-selector {
 	display: none;
+}
+
+html, body {
+	width: 100%;
+	height: 100%;
+}
+
+.shopping-cart {
+	height: 100%;
+	position: fixed;
+	top: 0;
+	right: 0;
+	padding: 70px;
+	background: #eee;
+	
+}
+
+.thumbnail-holder {
+	display: inline-block;
 }
