Working bare-bones missionary/orders and orders/new

--- a/app/views/admin/orders_inventory.html.erb
+++ b/app/views/admin/orders_inventory.html.erb
@@ -93,6 +93,6 @@
 <!-- Pass languages and categories to client side. -->
 <script type="text/javascript">
 	var languages = <%= raw @languages %>;
-	var categories = <%= raw @categories %>;
+	var categoriesCurrent = <%= raw @categories %>;
 	var ids = <%= raw @ids %>;
 </script>
