--- a/app/views/missionary/orders_new.html.erb
+++ b/app/views/missionary/orders_new.html.erb
@@ -42,6 +42,7 @@
 	<div class="shopping-cart-list">
 		
 	</div>
+	<button class="shopping-cart-submit btn btn-success">Submit Order</button>
 </div>
 
 <!-- Pass languages and categories to client side. -->
