--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
   <%= csrf_meta_tags %>
   
 </head>
-<body>
+<body data-no-turbolink>
 <div class="container-fluid">
 
 <%= render 'layouts/header' %>
