Push to heroku for demonstration.

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -105,3 +105,7 @@ div.local-row > span.col-xs-4 > * {
     from { transform: scale(1) rotate(0deg);}
     to { transform: scale(1) rotate(360deg);}
 }
+
+.orders-viewer-table {
+	width: 100%;
+}
