--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,37 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-	<div class="container-fluid">
-		<div class-"navbar-header">
-			<a class="navbar-brand" href="#">Missione di Milano</a>
+	<div class="container-fluid center-nav">
+		<div class="navbar-header">
+			<a class="navbar-brand" href="/">Missione di Milano</a>
 		</div>
 		
-		<ul class="navbar-right nav navbar-nav">
-			<li><a rel="nofollow" data-method="delete" href="/login"><span class="glyphicon glyphicon-user"></span>Log Out</a></li>
-		</ul>
+		<% if logged_in? %>
+			<span class="navbar-center">
+				<% if user_is_admin? %>
+					<% @url_base = "/admin" %>
+				<% else %>
+					<% @url_base = "/missionary" %>
+				<% end %>
+				
+				<ul class="nav navbar-nav nav-centered nav-collapse">
+					<% if (true || params[:action] != "users" && user_is_admin?) %>
+								<li class="nav-link-container"><a class="nav-link" href="<%= @url_base %>/users"><span class="glyphicon glyphicon-user nav-link-icon"></span><span class="nav-link-text"><h4>Users</h4></span></a></li>
+					<% end %>
+					
+					<% unless params[:action] == "orders" %>
+							<li class="nav-link-container"><a class="nav-link" href="<%= @url_base %>/orders"><span class="glyphicon glyphicon-book nav-link-icon"></span><span class="nav-link-text"><h4>Orders</h4></span></a></li>
+					<% end %>
+					
+					<% unless params[:action] == "baptismal_submission" %>
+							<li class="nav-link-container"><a class="nav-link" href="<%= @url_base %>/baptismal_submission"><span class="glyphicon glyphicon-question-sign nav-link-icon"></span><span class="nav-link-text"><h4>Baptismal Submission</h4></span></a></li>
+					<% end %>
+				
+				</ul>
+			</span>
+			
+			<ul class="navbar-right nav navbar-nav">
+				<li><a rel="nofollow" data-method="delete" href="/login"><span class="glyphicon glyphicon-user"></span>Log Out</a></li>
+			</ul>
+		<% end %>
 		
 		
 	</div>
